--- a/index.html
+++ b/index.html
@@ -1,30 +1,141 @@
+
 <!DOCTYPE html>
 
 <html lang="ko">
 <head>
 <meta charset="utf-8"/>
+<title>Project.PAW - 홈</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>메인 히어로 배너 + 네비게이션 포함 | Project.PAW</title>
-<link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-<header>
-<div class="logo"><a href="index.html">Project.PAW</a></div>
-<nav>
-<a href="index.html">Home</a>
-<a href="donation.html">Donation</a>
-
-<a href="about.html">About</a>
-<a href="login.html">Login</a>
-<a href="create.html">프로젝트 등록</a></nav>
-</header>
-<section class="hero">
-<h1>도움은 본능, 연결은 선택</h1>
-<p>Project.PAW는 따뜻한 마음과 마음이 연결되는 곳입니다.<br/>지금 당신의 선택이 한 생명을 살립니다.</p>
-<a class="btn" href="donation.html">후원 프로젝트 보기</a>
-</section>
-<footer class="footer">
-    © 2025 Project.PAW | 따뜻한 마음을 이어주는 플랫폼
-  </footer>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+<style>
+@media (max-width: 768px) {
+    .card {
+        padding: 12px !important;
+        margin: 12px 0 !important;
+        font-size: 14px !important;
+    }
+    .card h3 {
+        font-size: 18px !important;
+    }
+    .card p {
+        font-size: 13px !important;
+    }
+    .card a {
+        padding: 6px 12px !important;
+        font-size: 13px !important;
+    }
+}
+</style></head>
+<body class="bg-gray-50 text-gray-800">
+<!-- 🧭 네비게이션 바 -->
+<nav class="bg-white shadow p-4 flex justify-between items-center">
+<a class="text-xl font-bold text-blue-600" href="index.html">Project.PAW</a>
+<div class="space-x-4">
+<a class="text-gray-700 hover:text-blue-600" href="index.html">홈</a>
+<a class="text-gray-700 hover:text-blue-600" href="project_list.html">후원하기</a>
+<a class="text-gray-700 hover:text-blue-600" href="create.html">후원등록하기</a>
+<a class="text-gray-700 hover:text-blue-600" href="login.html">로그인</a>
+</div>
+</nav>
+<!-- 💙 메인 콘텐츠 -->
+<section class="mt-20 bg-white p-10 rounded-xl shadow-md border border-gray-200" id="philosophy"><div class="bg-white p-6 rounded-xl shadow-md border border-gray-200"><div class="grid grid-cols-1 md:grid-cols-3 gap-4"><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">🙌 도움은 본능, 연결은 선택
+            망설이는 마음에 선택할 수 있는 구조를 만듭니다.</div><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">🔗 직접 연결
+            구조자와 후원자가 직접 이어지는, 중간 없는 플랫폼.</div><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">💯 100% 전달
+            후원금은 구조자에게 전액 전달. PG 수수료는 PAW가 부담합니다.</div><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">📜 책임 있는 구조자
+            선결제하고, 후기를 성실히 공유한 구조자만 모금 가능합니다.</div><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">🧩 복지의 빈틈을 메우다
+            제도권이 놓친 순간, 개인 간 연결이 닿도록 설계했습니다.</div><div class="bg-gray-50 p-4 rounded-lg border border-gray-300 text-sm leading-relaxed">🌱 주는 사람도 존중
+            ‘감사합니다’가 끝이 아닌, ‘기억에 남는 경험’을 추구합니다.</div></div></div></section><h1 class="text-3xl font-bold mb-6 text-blue-700">진행 중인 구조 프로젝트</h1><main class="px-6 py-10">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+<!-- 카드 1: 이미지 + 텍스트 나란히 -->
+<div class="bg-white rounded-xl shadow-md border border-gray-200 flex flex-col md:flex-row overflow-hidden">
+<!-- 이미지 영역 -->
+<div class="md:w-1/2 h-48 md:h-auto bg-gray-200">
+<img alt="치즈냥이" class="w-full h-full object-cover" src="images/cat1.jpg"/>
+</div>
+<!-- 텍스트 영역 -->
+<div class="md:w-1/2 p-6 flex flex-col justify-between">
+<div>
+<h2 class="text-xl font-semibold text-gray-800">[치즈냥이]</h2>
+<p class="text-sm text-gray-600 mt-1">“아직 걷지도 못해요...”</p>
+<div class="mt-4 text-sm space-y-1">
+<p>✅ 목표: 600,000원</p>
+<p>💸 모금 현황: 350,000원</p>
+<p>👤 구조자부담액: 200,000원</p>
+</div>
+</div>
+<a class="mt-4 bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm text-center" href="https://pf.kakao.com/_link1" target="_blank">
+            📮 톡으로 바로 연결
+        </a>
+</div>
+</div>
+<!-- 카드 1: 이미지 + 텍스트 나란히 -->
+<div class="bg-white rounded-xl shadow-md border border-gray-200 flex flex-col md:flex-row overflow-hidden">
+<!-- 이미지 영역 -->
+<div class="md:w-1/2 h-48 md:h-auto bg-gray-200">
+<img alt="치즈냥이" class="w-full h-full object-cover" src="images/cat1.jpg"/>
+</div>
+<!-- 텍스트 영역 -->
+<div class="md:w-1/2 p-6 flex flex-col justify-between">
+<div>
+<h2 class="text-xl font-semibold text-gray-800">[치즈냥이]</h2>
+<p class="text-sm text-gray-600 mt-1">“아직 걷지도 못해요...”</p>
+<div class="mt-4 text-sm space-y-1">
+<p>✅ 목표: 600,000원</p>
+<p>💸 모금 현황: 350,000원</p>
+<p>👤 구조자부담액: 200,000원</p>
+</div>
+</div>
+<a class="mt-4 bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm text-center" href="https://pf.kakao.com/_link1" target="_blank">
+            📮 톡으로 바로 연결
+        </a>
+</div>
+</div>
+<!-- 카드 1: 이미지 + 텍스트 나란히 -->
+<div class="bg-white rounded-xl shadow-md border border-gray-200 flex flex-col md:flex-row overflow-hidden">
+<!-- 이미지 영역 -->
+<div class="md:w-1/2 h-48 md:h-auto bg-gray-200">
+<img alt="치즈냥이" class="w-full h-full object-cover" src="images/cat1.jpg"/>
+</div>
+<!-- 텍스트 영역 -->
+<div class="md:w-1/2 p-6 flex flex-col justify-between">
+<div>
+<h2 class="text-xl font-semibold text-gray-800">[치즈냥이]</h2>
+<p class="text-sm text-gray-600 mt-1">“아직 걷지도 못해요...”</p>
+<div class="mt-4 text-sm space-y-1">
+<p>✅ 목표: 600,000원</p>
+<p>💸 모금 현황: 350,000원</p>
+<p>👤 구조자부담액: 200,000원</p>
+</div>
+</div>
+<a class="mt-4 bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm text-center" href="https://pf.kakao.com/_link1" target="_blank">
+            📮 톡으로 바로 연결
+        </a>
+</div>
+</div>
+<!-- 카드 1: 이미지 + 텍스트 나란히 -->
+<div class="bg-white rounded-xl shadow-md border border-gray-200 flex flex-col md:flex-row overflow-hidden">
+<!-- 이미지 영역 -->
+<div class="md:w-1/2 h-48 md:h-auto bg-gray-200">
+<img alt="치즈냥이" class="w-full h-full object-cover" src="images/cat1.jpg"/>
+</div>
+<!-- 텍스트 영역 -->
+<div class="md:w-1/2 p-6 flex flex-col justify-between">
+<div>
+<h2 class="text-xl font-semibold text-gray-800">[치즈냥이]</h2>
+<p class="text-sm text-gray-600 mt-1">“아직 걷지도 못해요...”</p>
+<div class="mt-4 text-sm space-y-1">
+<p>✅ 목표: 600,000원</p>
+<p>💸 모금 현황: 350,000원</p>
+<p>👤 구조자부담액: 200,000원</p>
+</div>
+</div>
+<a class="mt-4 bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm text-center" href="https://pf.kakao.com/_link1" target="_blank">
+            📮 톡으로 바로 연결
+        </a>
+</div>
+</div>
+</div>
+<!-- 운영철학 섹션 -->
+</main>
 </body>
 </html>
