--- a/create.html
+++ b/create.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -63,64 +65,20 @@
     </div>
 
     <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const form = document.getElementById("rescueForm");
+    document.getElementById("rescueForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+        const name = document.getElementById("name").value;
+        const description = document.getElementById("description").value;
+        const amount = document.getElementById("amount").value;
+        const contribution = document.getElementById("contribution").value;
+        const kakao = document.getElementById("kakao").value;
 
-        form.addEventListener("submit", async function (e) {
-            e.preventDefault();
+        if (!name || !description || !amount || !contribution || !kakao) {
+            alert("모든 필드를 입력해주세요.");
+            return;
+        }
 
-            const name = document.getElementById("name").value;
-            const situation = document.getElementById("description").value;
-            const goalAmount = parseInt(document.getElementById("amount").value);
-            const ownerAmount = parseInt(document.getElementById("contribution").value);
-            const kakaoLink = document.getElementById("kakao").value;
-
-            async function toBase64(file) {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = () => resolve(reader.result);
-                    reader.onerror = reject;
-                    reader.readAsDataURL(file);
-                });
-            }
-
-            const mainImageInput = document.getElementById("mainImage");
-            const representativeImage = mainImageInput.files.length > 0
-                ? await toBase64(mainImageInput.files[0])
-                : "https://placekitten.com/400/250";
-
-            const situationImagesInput = document.getElementById("situationImages");
-            const situationImages = [];
-            for (let file of situationImagesInput.files) {
-                situationImages.push(await toBase64(file));
-            }
-
-            const receiptImagesInput = document.getElementById("receiptImages");
-            const receiptImages = [];
-            for (let file of receiptImagesInput.files) {
-                receiptImages.push(await toBase64(file));
-            }
-
-            const project = {
-                id: new Date().getTime(),
-                name,
-                situation,
-                goalAmount,
-                ownerAmount,
-                currentAmount: 0,
-                kakaoLink,
-                representativeImage,
-                situationImages,
-                receiptImages
-            };
-
-            const existing = JSON.parse(localStorage.getItem("projects") || "[]");
-            existing.push(project);
-            localStorage.setItem("projects", JSON.stringify(existing));
-
-            alert("프로젝트가 등록되었습니다!");
-            window.location.href = "index.html";
-        });
+        alert("프로젝트가 등록되었습니다! (데모)");
     });
     </script>
 </body>
