--- a/project.html
+++ b/project.html
@@ -2,13 +2,12 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>프로젝트 상세 정보</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>프로젝트 상세보기 | Project.PAW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
 
-  <!-- 네비게이션 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
@@ -20,66 +19,60 @@
     </div>
   </nav>
 
-  <div class="container py-5" id="projectDetail">
-    <!-- 내용은 JS에서 채움 -->
+  <div class="container mt-5 pt-4">
+    <div id="projectDetail" class="bg-white p-4 shadow rounded"></div>
+
+    <div class="text-center mt-5 text-muted">
+      <p>“도움은 본능, 연결은 선택”<br>Project.PAW는 책임의 끝과 공감의 시작이 만나는 곳입니다.</p>
+    </div>
   </div>
 
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const projectId = params.get("id");
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
 
+    function renderGallery(images) {
+      if (!images || images.length === 0) return '<p class="text-muted">이미지가 없습니다.</p>';
+      return images.map(img => `<img src="${img}" class="img-thumbnail m-1" style="max-width: 200px;" />`).join("");
+    }
+
+    const id = getQueryParam("id");
     const projects = JSON.parse(localStorage.getItem("projects") || "[]");
-    const project = projects.find(p => p.id === projectId);
+    const project = projects.find(p => p.id === id);
 
-    const container = document.getElementById("projectDetail");
-
-    if (!project) {
-      container.innerHTML = `<p class="text-center text-danger">해당 프로젝트를 찾을 수 없습니다.</p>`;
-    } else {
-      container.innerHTML = `
-        <div class="row mb-5">
+    if (project) {
+      document.getElementById("projectDetail").innerHTML = `
+        <div class="row">
           <div class="col-md-6">
-            <img src="${project.representativeImage || "https://placekitten.com/600/400"}" class="img-fluid rounded shadow-sm" alt="대표 이미지" />
+            <img src="${project.representativeImage}" class="img-fluid rounded shadow-sm" alt="대표 이미지">
           </div>
           <div class="col-md-6">
-            <h2 class="fw-bold">${project.name}</h2>
-            <p class="text-muted">${project.situation}</p>
+            <h2>${project.name}</h2>
+            <p>${project.description}</p>
             <ul class="list-group mb-3">
-              <li class="list-group-item"><strong>목표 금액:</strong> ₩${Number(project.goalAmount).toLocaleString()}</li>
-              <li class="list-group-item"><strong>구조자 부담금:</strong> ₩${Number(project.ownerAmount).toLocaleString()}</li>
+              <li class="list-group-item"><strong>목표 금액:</strong> ${project.goalAmount}원</li>
+              <li class="list-group-item"><strong>구조자 부담금:</strong> ${project.ownerAmount}원</li>
             </ul>
             <a href="${project.kakaoLink}" target="_blank" class="btn btn-warning">💬 카카오톡 문의</a>
           </div>
         </div>
 
-        <h4 class="mt-4 mb-3">구조 상황 사진</h4>
-        <div class="row">
-          ${(project.situationImages || []).map(url => `
-            <div class="col-md-4 mb-3">
-              <img src="${url}" class="img-fluid rounded shadow-sm" alt="상황 사진" />
-            </div>
-          `).join("") || "<p class='text-muted'>사진이 없습니다.</p>"}
-        </div>
+        <hr class="my-4" />
+        <h5>구조 상황 사진</h5>
+        <div class="d-flex flex-wrap">${renderGallery(project.situationImages)}</div>
 
-        <h4 class="mt-4 mb-3">영수증 사진</h4>
-        <div class="row">
-          ${(project.receiptImages || []).map(url => `
-            <div class="col-md-4 mb-3">
-              <img src="${url}" class="img-fluid rounded shadow-sm" alt="영수증 사진" />
-            </div>
-          `).join("") || "<p class='text-muted'>사진이 없습니다.</p>"}
-        </div>
+        <hr class="my-4" />
+        <h5>영수증 사진</h5>
+        <div class="d-flex flex-wrap">${renderGallery(project.receiptImages)}</div>
 
-        <hr class="my-5">
-
-        <div class="text-center text-secondary">
-          <blockquote class="blockquote">
-            <p class="mb-0 fs-5">“도움은 본능, 연결은 선택”</p>
-            <footer class="blockquote-footer">Project.PAW 운영 철학</footer>
-          </blockquote>
-          <p class="small">당신의 선택이 누군가에게는 생명을, 누군가에게는 용기를 줍니다.</p>
+        <div class="mt-4 text-end">
+          <a href="feedback.html?id=${project.id}" class="btn btn-outline-primary">📸 후기 등록</a>
         </div>
       `;
+    } else {
+      document.getElementById("projectDetail").innerHTML = `<p class="text-danger text-center">해당 프로젝트를 찾을 수 없습니다.</p>`;
     }
   </script>
 </body>
