--- a/create.html
+++ b/create.html
@@ -2,106 +2,107 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>구조 프로젝트 등록</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>프로젝트 등록 | Project.PAW</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">🐾 Project.PAW</a>
-      <div>
-        <a class="nav-link d-inline" href="index.html">홈</a>
-        <a class="nav-link d-inline" href="project_list.html">후원하기</a>
-        <a class="nav-link d-inline" href="create.html">프로젝트 등록</a>
-        <a class="nav-link d-inline" href="#">로그인</a>
-      </div>
+<body class="bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">🏠 홈</a></li>
+        <li class="nav-item"><a class="nav-link" href="project_list.html">📋 후원하기</a></li>
+        <li class="nav-item"><a class="nav-link active" href="create.html">➕ 프로젝트 등록</a></li>
+      </ul>
     </div>
   </nav>
 
-  <div class="container">
-    <h2 class="mb-4 text-center">구조 프로젝트 등록</h2>
-    <p class="text-center text-muted mb-4">“도움은 본능, 연결은 선택 - 당신의 따뜻한 선택을 기다립니다.”</p>
-    <form id="rescueForm">
+  <div class="container pt-5 mt-5">
+    <h2 class="my-4 text-center text-primary">프로젝트 등록하기</h2>
+    <form id="projectForm" class="bg-white p-4 shadow rounded">
       <div class="mb-3">
-        <label for="name" class="form-label">동물 이름</label>
-        <input type="text" class="form-control" id="name" required />
+        <label class="form-label">고양이 이름</label>
+        <input type="text" class="form-control" id="name" required>
       </div>
       <div class="mb-3">
-        <label for="description" class="form-label">구조 상황 설명</label>
-        <textarea class="form-control" id="description" rows="3" required></textarea>
+        <label class="form-label">구조 상황 설명</label>
+        <textarea class="form-control" id="description" rows="4" required></textarea>
       </div>
       <div class="mb-3">
-        <label for="amount" class="form-label">목표 금액 (₩)</label>
-        <input type="number" class="form-control" id="amount" required />
+        <label class="form-label">목표 금액 (원)</label>
+        <input type="number" class="form-control" id="goalAmount" required>
       </div>
       <div class="mb-3">
-        <label for="contribution" class="form-label">구조자 부담금 (₩)</label>
-        <input type="number" class="form-control" id="contribution" required />
+        <label class="form-label">구조자 부담금 (원)</label>
+        <input type="number" class="form-control" id="ownerAmount" required>
       </div>
       <div class="mb-3">
-        <label for="kakao" class="form-label">카카오톡 링크</label>
-        <input type="url" class="form-control" id="kakao" required />
+        <label class="form-label">카카오톡 링크</label>
+        <input type="url" class="form-control" id="kakaoLink">
       </div>
       <div class="mb-3">
-        <label for="mainImage" class="form-label">대표 이미지 업로드</label>
-        <input class="form-control" type="file" id="mainImage" accept="image/*" required>
+        <label class="form-label">대표 이미지</label>
+        <input type="file" class="form-control" id="representativeImage" accept="image/*" required>
       </div>
       <div class="mb-3">
-        <label for="situationImages" class="form-label">구조 상황 사진 (여러 장)</label>
-        <input class="form-control" type="file" id="situationImages" accept="image/*" multiple>
+        <label class="form-label">구조 상황 사진들</label>
+        <input type="file" class="form-control" id="situationImages" accept="image/*" multiple>
       </div>
       <div class="mb-3">
-        <label for="receiptImages" class="form-label">영수증 사진 (여러 장)</label>
-        <input class="form-control" type="file" id="receiptImages" accept="image/*" multiple>
+        <label class="form-label">영수증 사진들</label>
+        <input type="file" class="form-control" id="receiptImages" accept="image/*" multiple>
       </div>
-      <div class="d-grid">
+      <div class="text-end">
         <button type="submit" class="btn btn-primary">등록하기</button>
       </div>
-      <p class="text-center text-muted mt-2">등록 후 메인화면으로 이동됩니다.</p>
     </form>
   </div>
 
   <script>
-    document.getElementById("rescueForm").addEventListener("submit", function (e) {
+    function toBase64(file) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = reject;
+        reader.readAsDataURL(file);
+      });
+    }
+
+    document.getElementById("projectForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
       const name = document.getElementById("name").value;
       const description = document.getElementById("description").value;
-      const amount = document.getElementById("amount").value;
-      const contribution = document.getElementById("contribution").value;
-      const kakao = document.getElementById("kakao").value;
-      const mainImageFile = document.getElementById("mainImage").files[0];
+      const goalAmount = document.getElementById("goalAmount").value;
+      const ownerAmount = document.getElementById("ownerAmount").value;
+      const kakaoLink = document.getElementById("kakaoLink").value;
+      const representativeImageFile = document.getElementById("representativeImage").files[0];
+      const situationImageFiles = document.getElementById("situationImages").files;
+      const receiptImageFiles = document.getElementById("receiptImages").files;
 
-      if (!name || !description || !amount || !contribution || !kakao || !mainImageFile) {
-        alert("모든 필드를 입력해주세요.");
-        return;
-      }
+      const representativeImage = await toBase64(representativeImageFile);
+      const situationImages = await Promise.all([...situationImageFiles].map(file => toBase64(file)));
+      const receiptImages = await Promise.all([...receiptImageFiles].map(file => toBase64(file)));
 
-      const reader = new FileReader();
-      reader.onload = function () {
-        const representativeImage = reader.result;
-
-        const newProject = {
-          id: Date.now(),
-          name,
-          situation: description,
-          goalAmount: amount,
-          ownerAmount: contribution,
-          kakaoLink: kakao,
-          representativeImage,
-          currentAmount: 0,
-        };
-
-        const existingProjects = JSON.parse(localStorage.getItem("projects") || "[]");
-        existingProjects.push(newProject);
-        localStorage.setItem("projects", JSON.stringify(existingProjects));
-
-        alert("프로젝트가 등록되었습니다!");
-        window.location.href = "index.html";
+      const newProject = {
+        id: Date.now().toString(),
+        name,
+        description,
+        goalAmount,
+        ownerAmount,
+        kakaoLink,
+        representativeImage,
+        situationImages,
+        receiptImages,
+        currentAmount: 0
       };
 
-      reader.readAsDataURL(mainImageFile);
+      const projects = JSON.parse(localStorage.getItem("projects") || "[]");
+      projects.push(newProject);
+      localStorage.setItem("projects", JSON.stringify(projects));
+      alert("프로젝트가 성공적으로 등록되었습니다!");
+      window.location.href = "index.html";
     });
   </script>
 </body>
